--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to the ruchitchheda97’s homepage!
+description: Feel free to bookmark this to keep an eye on my project updates
